--- a/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
+++ b/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
@@ -8,7 +8,7 @@
         <i class="form-icon fa fa-th-large" aria-hidden="true"></i>
       </div>
       <ul class="menu" id="incomeCategory-ul" [style.display]="ulShow === true ? 'block':'none'">
-        <li [id]="'incomeCategory_'+item.id" class="menu-item" *ngFor="let item of list" (click)="selectItem(item)">
+        <li [id]="'incomeCategory_'+item.id" class="menu-item" *ngFor="let item of list" (click)="select(item)">
           <a class="text-ellipsis" [class.li-selected]="incomeCategory === item.name">{{item?.name}}</a>
           <p class="add-edit">
             <i class="icon icon-edit" (click)="edit($event,item)"></i>
