--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,11 +1,14 @@
 <main>
+  <div class="app-option">
+    <button class="btn btn-primary btn-action btn-sm" (click)="close()"><i class="icon icon-cross"></i></button>
+    <button class="btn btn-primary btn-action btn-sm" (click)="min()"><i class="icon icon-minus"></i></button>
+  </div>
   <div class="avatar-header">
     <figure class="avatar avatar-lg mr-2" data-initial="志锋"></figure>
     <p>
       <span class="badge">
         <i class="icon icon-message"></i>
       </span>
-
       <span class="badge" data-badge="2">
         <i class="icon icon-mail"></i>
       </span>
