--- a/src/app/components/account/components/income/income-add-edit/income-add-edit.component.scss
+++ b/src/app/components/account/components/income/income-add-edit/income-add-edit.component.scss
@@ -34,24 +34,27 @@ form {
   position: relative;
 }
 
-.income-select {
-  width: 59px;
-  font-size: 0.7rem;
-  padding: 0;
-  margin: 0;
-  height: auto;
-  padding-left: 0.2rem;
-  margin-top: .3rem;
-  border-radius: 0;
-  border: none;
-  margin-left: .2rem;
-}
+// .income-select {
+//   width: 59px;
+//   font-size: 0.7rem;
+//   padding: 0;
+//   margin: 0;
+//   height: auto;
+//   padding-left: 0.2rem;
+//   margin-top: .3rem;
+//   border-radius: 0;
+//   border: none;
+//   margin-left: .2rem;
+// }
+
+// .income-select:focus {
+//   box-shadow: none;
+// }
 
 .income-divider {
   display: block;
-  /* padding: .2rem; */
   padding-left: .4rem;
-  padding-right: 0.1rem;
+  padding-right: 0.5rem;
 }
 
 .income-divider::before {
@@ -64,9 +67,7 @@ form {
 }
 
 
-.income-select:focus {
-  box-shadow: none;
-}
+
 
 .edit-del {
   display: flex;
