样式&&新增头部&&修改导航

--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,6 +1,7 @@
 <main>
-  <app-nav></app-nav>
+  <app-nav class="app-nav"></app-nav>
+  <app-header class="app-header"></app-header>
   <section>
-      <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
   </section>
 </main>
