--- a/src/app/components/account/components/expense/expense.component.html
+++ b/src/app/components/account/components/expense/expense.component.html
@@ -1,5 +1,7 @@
 <main>
-  <expense-add-edit></expense-add-edit>
+  <section>
+    <expense-add-edit></expense-add-edit>
+  </section>
   <div class="dynamic-component">
     <ng-template dynamic-component></ng-template>
   </div>
