--- a/src/app/components/dashboard/components/home/home.component.html
+++ b/src/app/components/dashboard/components/home/home.component.html
@@ -1,5 +1,6 @@
 <main>
-  <app-nav></app-nav>
+  <app-nav class="app-nav"></app-nav>
+  <app-header class="app-header"></app-header>
   <section>
     <p>
       这是首页
