--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,18 +1,8 @@
 <main>
-  <div class="app-option">
-    <button class="btn btn-primary btn-action btn-sm" (click)="close()"><i class="icon icon-cross"></i></button>
-    <button class="btn btn-primary btn-action btn-sm" (click)="min()"><i class="icon icon-minus"></i></button>
-  </div>
+
   <div class="avatar-header">
-    <figure class="avatar avatar-lg mr-2" data-initial="志锋"></figure>
-    <p>
-      <span class="badge">
-        <i class="icon icon-message"></i>
-      </span>
-      <span class="badge" data-badge="2">
-        <i class="icon icon-mail"></i>
-      </span>
-    </p>
+    <img src="assets/img/logo.svg">
+    <h5 _ngcontent-c5=""><span>D</span>aily<span>R</span>eocrd</h5>
   </div>
 
   <ul class="nav">
@@ -37,7 +27,7 @@
     </li>
   </ul>
 
-  <button (click)="logout()" class="btn btn-link">
+  <!-- <button (click)="logout()" class="btn btn-link">
     <i class="icon icon-shutdown"></i>
-    退 出</button>
+    退 出</button> -->
 </main>
