--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,6 +1,8 @@
 <main>
-  <app-nav></app-nav>
-  <section>
+    <app-nav class="app-nav"></app-nav>
+    <app-header class="app-header"></app-header>
+    <section>
       <router-outlet></router-outlet>
-  </section>
-</main>
+    </section>
+  </main>
+  
