--- a/src/app/components/dashboard/components/login/login.component.html
+++ b/src/app/components/dashboard/components/login/login.component.html
@@ -1,15 +1,8 @@
-<!-- <main>
-  <h2>DailyRecord-记录点滴生活</h2>
-  <form>
-    <label for="nameOrEmali">用户名或邮箱</label>
-    <input id="nameOrEmali" type="text" name="nameOrEmali" [(ngModel)]="nameOrEmali">
-    <label for="pwd">密码</label>
-    <input id="pwd" type="password" name="password" [(ngModel)]="password">
-    <button (click)="login()">登 录</button>
-  </form>
-</main> -->
-
 <main>
+  <div class="app-option">
+    <button class="btn btn-primary btn-action btn-sm" (click)="min()"> <i class="icon icon-minus"></i></button>
+    <button class="btn btn-primary btn-action btn-sm" (click)="close()"><i class="icon icon-cross"></i></button>
+  </div>
   <div class="login">
     <h4>DailyReocrd</h4>
     <div class="login-info">
@@ -44,7 +37,6 @@
   </div>
 
   <div class="sign-info">
-
     <p class="sign-title">Don't Have an Account Yet?</p>
     <p>Let's get you all set up so you can start creating your first</p>
     <p>onboarding experience</p>
