--- a/src/app/components/dashboard/components/login/login.component.scss
+++ b/src/app/components/dashboard/components/login/login.component.scss
@@ -1,29 +1,3 @@
-// main {
-//   height: 100%;
-//   width: 100%;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   flex-direction: column;
-
-//   form {
-//     display: flex;
-//     flex-direction: column;
-//     label {
-//       &:last-of-type {
-//         margin-top: 20px;
-//       }
-//     }
-
-//     button {
-//       margin-top: 20px;
-//       cursor: pointer;
-//     }
-//   }
-// }
-
-
-
 main {
   position: relative;
   display: flex;
@@ -37,6 +11,31 @@ main {
   }
 }
 
+.app-option {
+  position: absolute;
+  right: 0;
+  z-index: 1000;
+
+  button {
+    background: none;
+    color: #f7f8f9;
+    border: none;
+    outline: none;
+    border-radius: 0;
+
+    &:focus {
+      background: none;
+      outline: none;
+      border: none;
+      box-shadow: none;
+    }
+
+    &:hover {
+      color: #4b48d6;
+      background: #f7f8f9;
+    }
+  }
+}
 
 p {
   margin: 0;
