--- a/src/app/components/account/components/income/income-add-edit/income-add-edit.component.scss
+++ b/src/app/components/account/components/income/income-add-edit/income-add-edit.component.scss
@@ -15,7 +15,7 @@ form {
 .dr-btn-group {
   display: flex;
   align-items: center;
-  margin: 10px 20px;
+  // margin: 10px 20px;
   justify-content: center;
 
   button {
@@ -60,8 +60,6 @@ form {
   top: .5rem;
   height: 0.8rem;
 }
-
-
 
 
 .edit-del {
