--- a/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.scss
+++ b/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.scss
@@ -1,6 +1,11 @@
 .form-item {
   position: relative;
 
+  .form-input[readonly] {
+    background-color: #fff;
+    cursor: pointer;
+  }
+
   ul {
     padding: 0;
     border-radius: .1rem .1rem 0 0;
@@ -63,4 +68,3 @@ input::-webkit-input-placeholder {
 ul::-webkit-scrollbar {
   display: none;
 }
-
