--- a/src/app/core/components/participant/participant-select/participant-select.component.scss
+++ b/src/app/core/components/participant/participant-select/participant-select.component.scss
@@ -43,10 +43,33 @@ section {
 }
 
 input {
-  width: 100px;
   border: none;
-  flex-grow: 1;
+  border-bottom: .05rem solid #bcc3ce;
+  font-size: .7rem;
+  text-overflow: ellipsis;
 }
+
+
+.form-input[readonly] {
+  background-color: #fff;
+  cursor: pointer;
+}
+
+// .form-input.readonly,
+// .form-input:readonly,
+// .form-select.readonly,
+// .form-select:readonly {
+//   background-color: #fff;
+//   cursor: pointer;
+//   opacity: 1;
+// }
+
+// input.readonly+.form-icon,
+// input:readonly+.form-icon {
+//   background: #fff;
+//   cursor: pointer;
+//   opacity: 1;
+// }
 
 ul {
   padding: 0;
@@ -56,7 +79,7 @@ ul {
   max-height: 150px;
   overflow-x: hidden;
   overflow-y: scroll;
-
+  top: 32px;
   li {
     cursor: pointer;
   }
