--- a/src/app/components/account/components/transfer/transfer.component.html
+++ b/src/app/components/account/components/transfer/transfer.component.html
@@ -1,3 +1,8 @@
-<p>
-  transfer works!
-</p>
+<main>
+  <section>
+    <transfer-add-edit></transfer-add-edit>
+  </section>
+  <div class="dynamic-component">
+    <ng-template dynamic-component></ng-template>
+  </div>
+</main>
