--- a/src/app/components/account/components/transfer/transfer-list/transfer-list.component.html
+++ b/src/app/components/account/components/transfer/transfer-list/transfer-list.component.html
@@ -15,7 +15,15 @@
       <div class="amount-date">
         <span>金额: {{item.amount}}元</span>
         <div class="split">
-          <span></span>
+          <!-- <span></span> -->
+          <i class="icon icon-arrow-right"></i>
+          <i class="icon icon-arrow-right"></i>
+          <i class="icon icon-arrow-right"></i>
+          <i class="icon icon-arrow-right"></i>
+          <i class="icon icon-arrow-right"></i>
+          <i class="icon icon-arrow-right"></i>
+          <i class="icon icon-arrow-right"></i>
+          <i class="icon icon-arrow-right"></i>
           <i class="icon icon-arrow-right"></i>
         </div>
         <span>日期: {{item.transferDate}}</span>
