--- a/src/app/components/account/components/transfer/transfer-add-edit/transfer-add-edit.component.scss
+++ b/src/app/components/account/components/transfer/transfer-add-edit/transfer-add-edit.component.scss
@@ -11,13 +11,59 @@ form {
     margin: 10px 0;
   }
 
+  .exchange-account {
+    padding: 0 .2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: .8rem;
+    cursor: pointer;
+
+    &:hover {
+      i {
+        color: #5755d9;
+      }
+
+      span {
+        background: #5755d9;
+      }
+    }
+
+    span {
+      display: inline-block;
+      width: 20px;
+      height: 2px;
+      background: #575d99;
+    }
+
+    div {
+      display: flex;
+      align-items: center;
+
+      &:first-of-type {
+        margin-left: -3px;
+      }
+    }
+
+    i {
+      font-size: .7rem;
+
+      &:first-of-type {
+        margin-right: -7px;
+      }
+
+      &:last-of-type {
+        margin-left: -7px;
+      }
+    }
+  }
+
   .handle {
     width: 100%;
     display: flex;
     align-items: center;
     margin-left: .4rem;
     margin-right: .4rem;
-    /* margin: .4rem; */
     margin-top: .5rem;
     background: #efefef;
     padding: .4rem;
