--- a/src/app/components/account/components/transfer/transfer-add-edit/transfer-add-edit.component.html
+++ b/src/app/components/account/components/transfer/transfer-add-edit/transfer-add-edit.component.html
@@ -3,8 +3,9 @@
     <div class="columns">
       <div class="column"
         [class.has-error]="transferForm.get('outFundAccount').errors && (transferForm.get('outFundAccount').dirty || transferForm.get('outFundAccount').touched)">
-        <fund-account-select formControlName="outFundAccount" [title]="'转出账户'" [fundChannelId]="''" [exceptId]="transfer.inFundAccountId"
-          [ngModel]="transfer.outFundAccountId" (ngModelChange)="setFundAccount($event)" [filterCredit]="true">
+        <fund-account-select formControlName="outFundAccount" [title]="'转出账户'" [fundChannelId]="''"
+          [exceptId]="transfer.inFundAccountId" [ngModel]="transfer.outFundAccountId"
+          (ngModelChange)="setFundAccount($event)" [filterCredit]="true">
         </fund-account-select>
         <div class="form-input-hint"
           *ngIf="transferForm.get('outFundAccount').errors && (transferForm.get('outFundAccount').dirty || transferForm.get('outFundAccount').touched)">
@@ -14,7 +15,7 @@
         </div>
       </div>
 
-      <div class="exchange-account">
+      <div class="exchange-account" (click)="exchangeAccount()">
         <div>
           <span></span>
           <i class="icon icon-arrow-right"></i>
@@ -28,7 +29,8 @@
       <div class="column"
         [class.has-error]="transferForm.get('inFundAccount').errors && (transferForm.get('inFundAccount').dirty || transferForm.get('inFundAccount').touched)">
         <fund-account-select formControlName="inFundAccount" [title]="'转入账户'" [fundChannelId]="''"
-          [ngModel]="transfer.inFundAccountId" (ngModelChange)="setFundAccount($event)" [filterCredit]="true" [exceptId]="transfer.outFundAccountId">
+          [ngModel]="transfer.inFundAccountId" (ngModelChange)="setFundAccount($event)" [filterCredit]="true"
+          [exceptId]="transfer.outFundAccountId">
         </fund-account-select>
         <p class="form-input-hint"
           *ngIf="transferForm.get('outFundAccount').errors && (transferForm.get('outFundAccount').dirty || transferForm.get('outFundAccount').touched)">
@@ -62,25 +64,22 @@
       <div class="handle">
         <div class="form-group">
           <label class="form-switch">
-            <input type="checkbox" #isHadleInputEle formControlName="isHandle">
+            <input type="checkbox" #isHadleInputEle formControlName="isHandle" [(ngModel)]="transfer.isHandle">
             <i class="form-icon"></i> 是否需要手续费
           </label>
         </div>
 
         <div class="input-group handleFee">
-          <input class="form-input" #amountInputEle formControlName="amount" type="number" step="0.01"
-            placeholder="手续费">
+          <input class="form-input" formControlName="handleFee"  [(ngModel)]="transfer.handleFee" type="number" step="0.01" placeholder="手续费"
+            #handleFeeInputEle>
           <span class="input-group-addon">元</span>
         </div>
       </div>
 
-      <!-- <div class="column col-6">
-      
-      </div> -->
     </div>
 
     <div class="columns detail">
-      <label-select [title]="'标签'" [type]="'1'" (setLabelList)="onSetLabelList($event)" [hasLabelList]="labelList">
+      <label-select [title]="'标签'" [type]="'3'" (setLabelList)="onSetLabelList($event)" [hasLabelList]="labelList">
       </label-select>
     </div>
 
@@ -91,24 +90,24 @@
   </form>
 
   <div class="dr-btn-group" *ngIf="!editOrDelFlag && addFlag">
-    <button class="btn btn-primary" (click)="addTransfer()">
+    <button type="button" class="btn btn-primary" (click)="addTransfer()">
       <i class="icon icon-plus"></i> 转账
     </button>
-    <button class="btn btn-Secondary" (click)="reset()">
+    <button type="button" class="btn btn-Secondary" (click)="reset()">
       <i class="icon icon-refresh"></i> 重置
     </button>
   </div>
   <div class="edit-del" *ngIf="editOrDelFlag && !addFlag">
     <div class="dr-btn-group">
-      <button class="btn btn-primary" (click)="editTransfer()">
+      <button type="button" class="btn btn-primary" (click)="editTransfer()">
         <i class="icon icon-edit"></i> 编辑
       </button>
-      <button class="btn btn-error" (click)="delTransfer()">
+      <button type="button" class="btn btn-error" (click)="delTransfer()">
         <i class="icon icon-delete"></i> 撤销
       </button>
     </div>
-    <button class="btn btn-link go-add" (click)="goAdd()">
-      <i class="icon icon-share"></i> 添加收入
+    <button type="button" class="btn btn-link go-add" (click)="goAdd()">
+      <i class="icon icon-share"></i> 添加转账
     </button>
   </div>
 
