--- a/src/app/core/components/participant/participant-add-edit/participant-add-edit.component.html
+++ b/src/app/core/components/participant/participant-add-edit/participant-add-edit.component.html
@@ -15,7 +15,7 @@
 
     <div class="form-group">
       <label class="form-switch">
-        <input type="checkbox" name="isMyself" [(ngModel)]="participant.isCurrenLive">
+        <input type="checkbox" name="isMyself" [(ngModel)]="participant.isMyself">
         <i class="form-icon"></i> 是否本人
       </label>
     </div>
