--- a/src/app/components/account/components/transfer/transfer-add-edit/transfer-add-edit.component.html
+++ b/src/app/components/account/components/transfer/transfer-add-edit/transfer-add-edit.component.html
@@ -103,7 +103,7 @@
         <i class="icon icon-edit"></i> 编辑
       </button>
       <button type="button" class="btn btn-error" (click)="delTransfer()">
-        <i class="icon icon-delete"></i> 撤销
+        <i class="icon icon-delete"></i> 删除
       </button>
     </div>
     <button type="button" class="btn btn-link go-add" (click)="goAdd()">
