--- a/src/app/components/report/components/common/report-filter/report-filter.component.html
+++ b/src/app/components/report/components/common/report-filter/report-filter.component.html
@@ -32,11 +32,11 @@
       </select>
       <div class="date">
         <dr-date style="width: 120px;margin-right: 5px;" [type]="'input'" name="startDate" [nameShow]="false" [dateName]="'startDate'"
-          [viewType]="selectedDateType" [size]="'small'" [ngModel]="startDate" (ngModelChange)="onSetDate($event)">
+          [viewType]="selectedDateType" [size]="'small'" [(ngModel)]="startDate" (ngModelChange)="onSetDate($event)">
         </dr-date>
 
         <dr-date style="width: 120px;" [type]="'input'" name="endDate" [nameShow]="false" [dateName]="'endDate'"
-          [viewType]="selectedDateType" [size]="'small'" [ngModel]="endDate" (ngModelChange)="onSetDate($event)">
+          [viewType]="selectedDateType" [size]="'small'" [(ngModel)]="endDate" (ngModelChange)="onSetDate($event)">
         </dr-date>
       </div>
     </div>
